--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -104,7 +104,12 @@
         padding-left: 100px;
         padding-right: 100px;
         padding-top: 75px;
-        padding-bottom: 75px;
+    }
+    #table-div {
+        padding-top: 75px;
+        padding-bottom: 50px;
+        padding-left: 100px;
+        padding-right: 100px;
     }
     .member-container {
         width: 85%;
@@ -130,6 +135,9 @@
         text-align: left;
         padding-left: 20px;
     }
+    table {
+        font-size: 22px;
+    }
 
   }
 
@@ -138,7 +146,10 @@
         padding-left: 50px;
         padding-right: 50px;
         padding-top: 50px;
-        padding-bottom: 15px;
+    }
+    #table-div {
+        padding-left: 50px;
+        padding-right: 50px;
     }
     #crest {
         padding-bottom: 15px;
@@ -147,10 +158,16 @@
     #members-title, #gallery-title, #history-title {
         font-size: 25px;
     }
+    td {
+        font-size: 16px;
+    }
   }
 
 
   @media only screen and (max-width: 600px) {
+    .image-title {
+        font-size: 25px;
+    }
     #letters {
         text-align: left;
         padding-left: 30px;
@@ -165,7 +182,10 @@
         padding-left: 50px;
         padding-right: 50px;
         padding-top: 40px;
-        padding-bottom: 15px;
+    }
+    #table-div {
+        padding-left: 50px;
+        padding-right: 50px;
     }
     .description-paragraph {
         font-size: 14px;
@@ -211,3 +231,4 @@
         transform: translateX(-50%);
     }
   }
+
