--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -104,6 +104,7 @@
         padding-left: 100px;
         padding-right: 100px;
         padding-top: 75px;
+        padding-bottom: 90px;
     }
     #table-div {
         padding-top: 75px;
@@ -146,6 +147,7 @@
         padding-left: 50px;
         padding-right: 50px;
         padding-top: 50px;
+        padding-bottom: 65px;
     }
     #table-div {
         padding-left: 50px;
@@ -182,6 +184,7 @@
         padding-left: 50px;
         padding-right: 50px;
         padding-top: 40px;
+        padding-bottom: 55px;
     }
     #table-div {
         padding-left: 50px;
