--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ main {
     padding-left: 200px;
     padding-right: 200px;
     padding-top: 120px;
+    padding-bottom: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,11 +156,11 @@ footer {
 #table-div {
     padding-left: 200px;
     padding-right: 200px;
-    padding-top: 120px;
-    padding-bottom: 75px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(178,7,56);
+    color: white;
 }
 
 table {
@@ -322,12 +323,6 @@ h2 {
 
 .title {
     text-align: center;
-}
-
-.title p {
-    color: #0d71fc;
-    font-size: 1.3em;
-    letter-spacing: 2px;
 }
 
 .timeline {
