--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -200,7 +200,7 @@
         height: 400px;
     }
     .member-text {
-        font-size: 9px; /* A more readable font size */
+        font-size: 9px;
         padding: 20px;
     }
     .name-title, .member-description {
@@ -217,7 +217,7 @@
 
   @media (max-width: 650px) {
     .member-text {
-        font-size: 11px; /* A more readable font size */
+        font-size: 11px;
     }
 }
 
